<!--
  ~  Copyright (c) 2016.  Project Launcher
  ~  Source strings.xml
  ~  Author 沈煜
  ~  此源码及相关文档等附件由 沈煜 编写，作者保留所有权利
  ~  使用必须注明出处。
  ~  The code and documents is write by the author. All rights are reserved.
  ~  Use must indicate the source.
  ~
  -->

<resources>
    <string name="app_name">Launcher</string>
    <string name="name_module1">绘本课程</string>
    <string name="name_module2">美术创想</string>
    <string name="name_module3">英语ABC</string>
    <string name="name_module4">音乐律动</string>
    <string name="name_module5">科学探索</string>
    <string name="name_module6">趣味学习</string>
    <string name="name_module7">备课中心</string>
    <string name="name_module8">安全教育</string>
    <string name="name_module9">水墨国学</string>
    <string name="home_grid_item_icon">应用图标</string>
    <string name="hello_app">Hello APP</string>
    <string name="book_name">萨拉和她的谎言</string>
    <string name="detail_name">画面阅读</string>
    <string name="detail_group_name">社会交际</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="module_name">绘本欣赏</string>
</resources>
